@@ -5,6 +5,7 @@
 
 
 import org.opensearch.gradle.testclusters.OpenSearchCluster
+import org.opensearch.gradle.info.FipsBuildParams
 
 import javax.net.ssl.HostnameVerifier
 import javax.net.ssl.HttpsURLConnection
@@ -112,7 +113,7 @@ dependencies {
     implementation "org.opensearch:opensearch-remote-metadata-sdk:${opensearch_build}"
 
     implementation "org.opensearch:common-utils:${common_utils_version}"
-    implementation("com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}")
+    implementation("com.fasterxml.jackson.core:jackson-annotations:${versions.jackson_annotations}")
     implementation("com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}")
     implementation group: 'com.networknt' , name: 'json-schema-validator', version: '1.4.0'
     implementation (group: 'com.google.guava', name: 'guava', version: '32.1.3-jre') {
@@ -198,6 +199,13 @@ def _numNodes = findProperty('numNodes') as Integer ?: 1
 test {
     include '**/*Tests.class'
     systemProperty 'tests.security.manager', 'false'
+    // In FIPS mode, bc-fips is excluded from the plugin bundle to avoid jar hell with OpenSearch core.
+    // Unit tests don't run inside OpenSearch, so we add bc-fips directly to the test classpath.
+    if (FipsBuildParams.isInFipsMode()) {
+        classpath += configurations.detachedConfiguration(
+            dependencies.create("org.bouncycastle:bc-fips:2.1.2")
+        )
+    }
 }
 
 def opensearch_tmp_dir = rootProject.file('build/private/opensearch_tmp').absoluteFile
@@ -297,6 +305,67 @@ def securityPluginFile = resolvePluginFile("opensearch-security")
 testClusters.integTest {
     testDistribution = "ARCHIVE"
     if (_numNodes > 1) numberOfNodes = _numNodes
+
+    // Streaming setup - enable with -Dstreaming=true
+    if (System.getProperty("streaming") == "true") {
+        setting 'opensearch.experimental.feature.transport.stream.enabled', 'true'
+        setting 'http.type', securityEnabled ? 'reactor-netty4-secure' : 'reactor-netty4'
+
+        if (_numNodes > 1) {
+            setting 'arrow.flight.publish_host', '127.0.0.1'
+            setting 'arrow.flight.bind_host', '127.0.0.1'
+        }
+
+        if (securityEnabled) {
+            setting 'transport.stream.type.default', 'FLIGHT-SECURE'
+            setting 'flight.ssl.enable', 'true'
+        }
+
+        systemProperty 'io.netty.allocator.numDirectArenas', '1'
+        systemProperty 'io.netty.noUnsafe', 'false'
+        systemProperty 'io.netty.tryUnsafe', 'true'
+        systemProperty 'io.netty.tryReflectionSetAccessible', 'true'
+        jvmArgs '--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED'
+
+        // Required streaming plugins
+        def opensearchCore = System.getenv("OPENSEARCH_CORE_PATH") ?: { throw new GradleException("OPENSEARCH_CORE_PATH environment variable must be set") }()
+        def transportPluginDir = file("${opensearchCore}/plugins/transport-reactor-netty4/build/distributions")
+        def arrowPluginDir = file("${opensearchCore}/plugins/arrow-flight-rpc/build/distributions")
+
+        def transportPlugin = transportPluginDir.exists() ? transportPluginDir.listFiles()?.find { it.name.endsWith('.zip') && it.name.contains(opensearchVersion) } : null
+        def arrowPlugin = arrowPluginDir.exists() ? arrowPluginDir.listFiles()?.find { it.name.endsWith('.zip') && it.name.contains(opensearchVersion) } : null
+
+        if (!transportPlugin) {
+            throw new GradleException("transport-reactor-netty4 plugin not found. Run: cd ${opensearchCore} && ./gradlew :plugins:transport-reactor-netty4:assemble")
+        }
+        if (!arrowPlugin) {
+            throw new GradleException("arrow-flight-rpc plugin not found. Run: cd ${opensearchCore} && ./gradlew :plugins:arrow-flight-rpc:assemble")
+        }
+
+        plugin(provider(new Callable<RegularFile>() {
+            @Override
+            RegularFile call() throws Exception {
+                return new RegularFile() {
+                    @Override
+                    File getAsFile() {
+                        return transportPlugin
+                    }
+                }
+            }
+        }))
+        plugin(provider(new Callable<RegularFile>() {
+            @Override
+            RegularFile call() throws Exception {
+                return new RegularFile() {
+                    @Override
+                    File getAsFile() {
+                        return arrowPlugin
+                    }
+                }
+            }
+        }))
+    }
+
     configureClusterPlugins(delegate, jobSchedulerFile, securityPluginFile, securityEnabled)
 }
 
@@ -597,6 +666,8 @@ List<String> jacocoExclusions = [
         'org.opensearch.ml.rest.RestMLPredictionStreamAction.*',
         'org.opensearch.ml.rest.RestMLExecuteStreamAction',
         'org.opensearch.ml.rest.RestMLExecuteStreamAction.*',
+        // TODO: Refactor ContextManagementTemplateService to make async callbacks testable
+        'org.opensearch.ml.action.contextmanagement.ContextManagementTemplateService',
 ]
 
 jacocoTestCoverageVerification {
@@ -627,6 +698,13 @@ configurations.all {
     exclude group: "org.jetbrains", module: "annotations"
     exclude group: "com.google.guava", module: "failureaccess"
     exclude group: "com.google.errorprone", module: "error_prone_annotations"
+    
+    // When building with -Pcrypto.standard=FIPS-140-3, bcFips jars are provided by OpenSearch
+    // This prevents jar hell when the plugin is installed
+    if (FipsBuildParams.isInFipsMode()) {
+        exclude group: 'org.bouncycastle', module: 'bc-fips'
+    }
+    
     resolutionStrategy.force "org.apache.commons:commons-lang3:${versions.commonslang}"
     resolutionStrategy.force 'commons-logging:commons-logging:1.2'
     resolutionStrategy.force 'org.objenesis:objenesis:3.2'
@@ -664,7 +742,7 @@ configurations.all {
     resolutionStrategy.force "software.amazon.awssdk:regions:${versions.aws}"
     resolutionStrategy.force "software.amazon.awssdk:netty-nio-client:${versions.aws}"
     resolutionStrategy.force "software.amazon.awssdk:s3:${versions.aws}"
-    resolutionStrategy.force 'com.fasterxml.jackson.core:jackson-annotations:2.18.3'
+    resolutionStrategy.force "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson_annotations}"
     resolutionStrategy.force 'com.networknt:json-schema-validator:1.5.7'
     resolutionStrategy.force 'com.fasterxml.jackson:jackson-bom:2.18.3'
     resolutionStrategy.force 'org.yaml:snakeyaml:2.3'
@@ -681,6 +759,8 @@ configurations.all {
     resolutionStrategy.force "io.netty:netty-handler:${versions.netty}"
     resolutionStrategy.force "io.netty:netty-resolver:${versions.netty}"
     resolutionStrategy.force "io.netty:netty-transport-native-unix-common:${versions.netty}"
+    resolutionStrategy.force 'org.apache.logging.log4j:log4j-api:2.25.3'
+    resolutionStrategy.force 'org.apache.logging.log4j:log4j-core:2.25.3'
 }
 
 apply plugin: 'com.netflix.nebula.ospackage'
